--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="https://www.unpkg.com/solana-connect"></script>
 	</head>
 	<body>
-		<script src="./dist/main.js"></script>
+		<script src="./main.js"></script>
 
 		<script>
 			async function connectWallet() {
