--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
 		<p id="wallet-address">No conectado</p>
 		<button id="pagar">Pagar 0.1 SOL</button>
+		<div id="wallets-container"></div>
 	</body>
 </html>
